Fixes #2 by adding custom concat delimiter option to Rollup__mdt

--- a/rollup/app/lwc/rollupForceRecalculation/rollupForceRecalculation.html
+++ b/rollup/app/lwc/rollupForceRecalculation/rollupForceRecalculation.html
@@ -88,6 +88,15 @@
             required
           >
           </lightning-input>
+          <lightning-input
+            data-id="potentialConcatDelimiter"
+            class="slds-col slds-form-element slds-form-element_horizontal"
+            type="text"
+            label="Concat Delimiter (Optional)"
+            name="potentialConcatDelimiter"
+            onchange={handleChange}
+          >
+          </lightning-input>
           <lightning-textarea
             class="slds-col slds-form-element slds-form-element_horizontal"
             onchange={handleChange}
