Initial commit to allow selection of rows in LWC datatable

--- a/rollup/app/lwc/rollupForceRecalculation/rollupForceRecalculation.html
+++ b/rollup/app/lwc/rollupForceRecalculation/rollupForceRecalculation.html
@@ -18,10 +18,11 @@
           ></lightning-combobox>
           <template if:true={selectedMetadataCMDTRecords}>
             <lightning-datatable
-                key-field="id"
+                key-field="Id"
                 data={selectedMetadataCMDTRecords}
                 show-row-number-column
-                hide-checkbox-column
+                selected-rows={selectedRows}
+                onrowselection={handleRowSelect}
                 columns={cmdtColumns}>
             </lightning-datatable>
           </template>
