--- a/rollup/app/lwc/rollupForceRecalculation/rollupForceRecalculation.html
+++ b/rollup/app/lwc/rollupForceRecalculation/rollupForceRecalculation.html
@@ -18,92 +18,94 @@
           ></lightning-combobox>
           <template if:true={selectedMetadataCMDTRecords}>
             <lightning-datatable
+                data-id='datatable'
                 key-field="Id"
                 data={selectedMetadataCMDTRecords}
+                onrowselection={handleRowSelect}
+                max-row-selection={maxRowSelection}
                 show-row-number-column
                 selected-rows={selectedRows}
-                onrowselection={handleRowSelect}
                 columns={cmdtColumns}>
             </lightning-datatable>
           </template>
         </template>
         <template if:false={isCMDTRecalc}>
           <lightning-input
-            data-id="calcItemSObjectName"
+            data-id="CalcItem__c"
             class="slds-col slds-form-element slds-form-element_horizontal"
             type="text"
             label="Calc Item SObject API Name"
-            name="calcItemSObjectName"
+            name="CalcItem__c"
             oncommit={handleChange}
             required
           >
           </lightning-input>
           <lightning-input
-            data-id="opFieldOnCalcItem"
+            data-id="RollupFieldOnCalcItem__c"
             class="slds-col slds-form-element slds-form-element_horizontal"
             type="text"
             label="API Name of the rollup field on calc item"
-            name="opFieldOnCalcItem"
+            name="RollupFieldOnCalcItem__c"
             oncommit={handleChange}
             required
           >
           </lightning-input>
           <lightning-input
-            data-id="lookupFieldOnCalcItem"
+            data-id="LookupFieldOnCalcItem__c"
             class="slds-col slds-form-element slds-form-element_horizontal"
             type="text"
             label="API Name of the lookup field on calc item"
-            name="lookupFieldOnCalcItem"
+            name="LookupFieldOnCalcItem__c"
             oncommit={handleChange}
             required
           >
           </lightning-input>
           <lightning-input
-            data-id="lookupFieldOnLookupObject"
+            data-id="LookupFieldOnLookupObject__c"
             class="slds-col slds-form-element slds-form-element_horizontal"
             type="text"
             label="API Name of the lookup field on the lookup object"
-            name="lookupFieldOnLookupObject"
+            name="LookupFieldOnLookupObject__c"
             oncommit={handleChange}
             required
           >
           </lightning-input>
           <lightning-input
-            data-id="rollupFieldOnLookupObject"
+            data-id="RollupFieldOnLookupObject__c"
             class="slds-col slds-form-element slds-form-element_horizontal"
             type="text"
             label="API Name of the rollup field on the lookup object"
-            name="rollupFieldOnLookupObject"
+            name="RollupFieldOnLookupObject__c"
             oncommit={handleChange}
             required
           >
           </lightning-input>
           <lightning-input
-            data-id="lookupSObjectName"
+            data-id="LookupObject__c"
             class="slds-col slds-form-element slds-form-element_horizontal"
             type="text"
             label="Lookup SObject API Name"
-            name="lookupSObjectName"
+            name="LookupObject__c"
             oncommit={handleChange}
             required
           >
           </lightning-input>
           <lightning-input
-            data-id="operationName"
+            data-id="RollupOperation__c"
             class="slds-col slds-form-element slds-form-element_horizontal"
             type="text"
             label="Rollup Operation Name (SUM/MIN/MAX/COUNT/COUNT_DISTINCT/CONCAT/CONCAT_DISTINCT/AVERAGE/FIRST/LAST)"
-            name="operationName"
+            name="RollupOperation__c"
             oncommit={handleChange}
             required
           >
           </lightning-input>
           <lightning-input
-            data-id="potentialConcatDelimiter"
+            data-id="ConcatDelimiter__c"
             class="slds-col slds-form-element slds-form-element_horizontal"
             type="text"
             label="Concat Delimiter (Optional)"
-            name="potentialConcatDelimiter"
+            name="ConcatDelimiter__c"
             oncommit={handleChange}
           >
           </lightning-input>
@@ -111,7 +113,7 @@
             class="slds-col slds-form-element slds-form-element_horizontal"
             onchange={handleChange}
             label="Where Clause SOQL Filters (Optional)"
-            name="potentialWhereClause"
+            name="CalcItemWhereClause__c"
           ></lightning-textarea>
         </template>
         <lightning-button class="slds-col slds-m-top_small" variant="brand" onclick={handleSubmit} label="Start rollup!"></lightning-button>
