--- a/rollup/app/lwc/recalculateParentRollupFlexipage/recalculateParentRollupFlexipage.html
+++ b/rollup/app/lwc/recalculateParentRollupFlexipage/recalculateParentRollupFlexipage.html
@@ -1,8 +1,8 @@
 <template>
   <template if:true={isValid}>
-    <div class="slds-is-absolute">
+    <div class="slds-m-bottom_large">
       <template if:true={isRecalculating}>
-        <lightning-spinner size="small" class="slds-is-relative" alternative-text="Recalculating ..."></lightning-spinner>
+        <lightning-spinner size="small" alternative-text="Recalculating ..."></lightning-spinner>
       </template>
       <template if:false={isRecalculating}>
         <lightning-button onclick={handleClick} title="Recalculate Parent Rollup" label="Recalculate Rollups"></lightning-button>
