Initial commit starting fix for #228 by introducing new RollupOrderBy__mdt custom metadata type for defining how FIRST/LAST rollups will be sorted

--- a/rollup/app/lwc/rollupForceRecalculation/rollupForceRecalculation.html
+++ b/rollup/app/lwc/rollupForceRecalculation/rollupForceRecalculation.html
@@ -122,6 +122,7 @@
             </lightning-input>
             <lightning-helptext content="Only include the split option for CONCAT_DISTINCT rollups"></lightning-helptext>
           </div>
+          <!-- TODO if FIRST/LAST is defined, conditionally show list section for RollupOrderBy__mdt -->
           <lightning-input
             data-id="OrderByFirstLast__c"
             class="slds-col slds-form-element slds-form-element_horizontal"
