--- a/rollup/app/lwc/rollupOrderBy/rollupOrderBy.html
+++ b/rollup/app/lwc/rollupOrderBy/rollupOrderBy.html
@@ -1,6 +1,6 @@
 <template>
   <template if:true={dataHasLoaded}>
-    <lightning-card class="slds-col" title="Add FIRST/LAST order by records" icon-name="custom:custom33">
+    <lightning-card class="slds-col" title="Add order by records" icon-name="custom:custom33">
       <div slot="actions">
         <lightning-button
           class="slds-m-horizontal_xx-small"
